# epicsa-python

./: .gitignore  LICENSE  README.md  install_packages.R  pyproject.toml  requirements.txt  requirements_dev.txt
epicsa_python/: epicsa.py  setup.py
tests/: test_epicsa_python.py
tests/data/: agades.csv  daily_summary_data.csv  dodoma.csv  niger50.csv  observationFinalMinimal.csv  stations_niger.csv  summary_data.csv  summary_data_dekad.csv  summary_data_export_geoclim_month.csv  yearly_niger.csv
tests/results_expected/: annual_rainfall_summaries_expected010.csv  annual_rainfall_summaries_expected010.json  annual_rainfall_summaries_expected020.json  annual_rainfall_summaries_expected030.json  annual_rainfall_summaries_expected040.json  annual_rainfall_summaries_expected050.json  annual_temperature_summaries_expected010.json  annual_temperature_summaries_expected020.json  crop_success_probabilities_expected010.json  crop_success_probabilities_expected020.json  crop_success_probabilities_expected030.json  crop_success_probabilities_expected040.json  crop_success_probabilities_expected050.json  monthly_temperature_summaries_expected010.json  season_start_probabilities_expected010.json  season_start_probabilities_expected020.json
