[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epicsa-python"
version = "0.0.1"
authors = [
  { name="Stephen Lloyd", email="stephen.lloyd@idems.international" },
]
description = "Provides Python wrapper functions for the E-PICSA product."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IDEMSInternational/epicsa-python"
"Bug Tracker" = "https://github.com/IDEMSInternational/epicsa-python/issues"